fix a lot of spacing

--- a/wp-content/themes/cmp/assets/styles/pages/_things-to-do-page.scss
+++ b/wp-content/themes/cmp/assets/styles/pages/_things-to-do-page.scss
@@ -1,6 +1,5 @@
 #things-to-do-page {
-  padding-bottom:2em;
-
+  
   .nav-breadcrumb {
     display:flex;
 
@@ -79,7 +78,7 @@
 
   .hero-image__text {
     position:relative;
-    top:294px;
+    top: 294px;
     padding:0em 1em;
     margin:0;
     display:inline-block;
