--- a/wp-content/themes/cmp/assets/styles/pages/_twitter-feed.scss
+++ b/wp-content/themes/cmp/assets/styles/pages/_twitter-feed.scss
@@ -1,9 +1,5 @@
 #twitter-feed {
 
-  padding-top:2em;
-  padding-bottom: 1em;
-  height:250px;
-  overflow: hidden;
   width: 100%;
 
   background-color: #EBEBEB;
